# OpenGLES_Demo

./: README.md  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
java_opengles/: README.md  build.gradle
java_opengles/src/main/: AndroidManifest.xml
java_opengles/src/main/java/com/example/java_opengles/: GLView.kt  HelloTriangleRenderer.kt  MainActivity.kt  MyGLRender.kt  MyNativeRender.java
java_opengles/src/main/res/layout/: activity_main.xml
java_opengles/src/main/res/values/: strings.xml
ndk_opengles/: README.md  build.gradle
ndk_opengles/src/main/: AndroidManifest.xml
ndk_opengles/src/main/cpp/: CMakeLists.txt  EGLManager.cpp  EGLManager.h  Main.cpp  Main.h  ShaderManager.cpp  ShaderManager.h  Texture2D.cpp  TextureCubemap.cpp  TextureVertexShader.cpp  Texture_2D_Instancing.cpp  Texture_2D_mipmap.cpp  Texture_2D_modes.cpp  TransformUtils.cpp  TransformUtils.h  Triangle.cpp  Triangle_MapBuffer.cpp  Triangle_VBO.cpp  test.c
ndk_opengles/src/main/cpp/include/: default.h
ndk_opengles/src/main/cpp/old/: Instancing.c  MapBuffers.c  MipMap2D.c  Simple_Texture2D.c  Simple_TextureCubemap.c  Simple_VertexShader.c  TextureWrap.c
ndk_opengles/src/main/res/values/: strings.xml
opengl_common/: README.md  build.gradle
opengl_common/src/main/: AndroidManifest.xml
opengl_common/src/main/cpp/: CMakeLists.txt  esShapes.c  esTransform.c  esUtil.c
opengl_common/src/main/cpp/include/: LogUtils.h  esUtil.h
opengl_common/src/main/java/com/example/opengl_common/: ESShader.java  ESShapes.java  ESTransform.java
